--- a/test/tip.css
+++ b/test/tip.css
@@ -1,20 +1,20 @@
-body{
+body {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
 }
 
-h1{
+h1 {
   margin-top: 0;
   font-size: 46px;
   text-align: center;
-  span{
-    display: block;
-    color: lavender;
-    &:hover{
-      color: gold;
-      cursor: pointer;
-    }
-  }
+}
+h1 span {
+  display: block;
+  color: lavender;
+}
+h1 span:hover {
+  color: gold;
+  cursor: pointer;
 }
