--- a/EssentialTheory/변수Variables/var02.css
+++ b/EssentialTheory/변수Variables/var02.css
@@ -23,8 +23,29 @@
   width: 200px;
   height: 200px;
   border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -o-border-radius: 10px;
+  background-image: url(img/blog-post-01.jpg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.portfolio .portfolio_items .portfolio_item:nth-child(2) {
+  background-image: url("img/blog-post-02.jpg");
+}
+.portfolio .portfolio_items .portfolio_item:nth-child(3) {
+  background-image: url("img/blog-post-03.jpg");
+}
+.portfolio .portfolio_items .portfolio_item:nth-child(4) {
+  background-image: url("img/blog-post-04.jpg");
+}
+.portfolio .portfolio_items .portfolio_item:nth-child(5) {
+  background-image: url("img/blog-post-05.jpg");
+}
+.portfolio .portfolio_items .portfolio_item:nth-child(6) {
+  background-image: url("img/blog-post-06.jpg");
+}
+.portfolio .portfolio_items .portfolio_item:nth-child(7) {
+  background-image: url("img/blog-post-07.jpg");
+}
+.portfolio .portfolio_items .portfolio_item:nth-child(8) {
+  background-image: url("img/blog-post-08.jpg");
 }
